[package]
name = "rust-basic-rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "*", features = ["rand"] }
miller_rabin = "1.1.1"
rust-miller-rabin = "0.1.3"
num-traits = "0.2.18"
